--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,7 +1,7 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
 
-jdbc.url=jdbc\:mysql\://localhost\:3306/production_ssm
+jdbc.url=jdbc\:mysql\://118.24.234.156\:3306/db_production_erp
 
 jdbc.username=root
 
-jdbc.password=root
+jdbc.password=Zcwl@0710
